--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ body {
 		<title></title>
 		<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 		<script src='https://unpkg.com/@ruffle-rs/ruffle'></script>
-		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/swfobject/2.2/swfobject.js"></script>
+		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/swfobject/2.2/swfobject.js"></script>
 		<script type="text/javascript">
 			var flashvars = {};
 			var params = {};
